--- a/stylus/components/contact.styl
+++ b/stylus/components/contact.styl
@@ -1,7 +1,7 @@
 .Contact
   display flex
   flex-direction column
-  justify-content center
+  align-items center
   padding-bottom 100px
   .title
     color black_primary
@@ -9,14 +9,13 @@
     display flex
     flex-direction column
     width 100%
-    max-width 600px
+    max-width 700px
     div
       display flex
       flex-direction column
-      &.send
-        align-items: flex-end;
-        button
-          margin-right 0
+      align-items center
+      button
+        margin-right 0
     input,
     textarea
       padding 1em
