--- a/stylus/components/footer.styl
+++ b/stylus/components/footer.styl
@@ -1,5 +1,4 @@
 .Footer
-  display flex
   position absolute
   bottom 0
   left 0
@@ -7,16 +6,25 @@
   background black_primary
   color gray_secundary
   z-index 3
-  flex-direction column
-  padding 1em
+  display flex
+  justify-content: center;
+  &-wrapper
+    max-width 1100px
+    width 100%
+    display flex
+    flex-direction row
+    justify-content center
+    padding 1em
   &-info
     display flex
-    flex-direction column
+    flex-direction row
     align-items center
     a
-      color gray_secundary
+      color gray_primary
       text-decoration none
     h6
       display none
   .social
     display none
+    a
+      margin-left .8em
