--- a/stylus/components/project.styl
+++ b/stylus/components/project.styl
@@ -6,21 +6,20 @@
   display flex
   flex-wrap wrap
   align-items center
+  justify-content: center;
   &-item
     display flex
     flex-direction column
     justify-content center
     align-items center
     box-shadow 0 1px 10px rgba(black_primary, .3)
-    margin-bottom 1em
     width 100%
     height 60vw
-    max-width 350px
-    max-height 250px
     position relative
     cursor pointer
     overflow hidden
     border-radius .3em
+    margin .5em
     &:hover
       .description
         transform translateY(-44%);
