--- a/stylus/styles.styl
+++ b/stylus/styles.styl
@@ -16,3 +16,47 @@ body
 @import './components/project'
 @import './components/contact'
 @import './components/footer'
+
+// Media query
+@media screen and (min-width: 570px)
+  .Project
+    justify-content: space-between;
+    justify-content: center;
+    max-width 1200px
+    &-item
+      width calc(50% - 2em)
+      height 30vw
+      margin .5em
+
+@media screen and (min-width: 770px)
+  .About
+    flex-direction row-reverse
+    &-avatar
+      width 700px
+      max-width auto
+  .Project-item
+    width 350px
+    height 250px
+
+  .Contact > form
+    div
+      &:last-child
+        align-items flex-end
+      &:first-child
+        flex-direction row
+        > input:first-child
+          margin-right 1em
+
+  .Footer
+    &-wrapper
+      justify-content: space-between;
+    .social
+      display block
+
+
+@media screen and (min-width: 1000px)
+  .Header-nav
+    display block
+  .Footer
+    &-info > h6
+      display block
