--- a/stylus/components/project.styl
+++ b/stylus/components/project.styl
@@ -1,54 +1,57 @@
 .Project
-  margin 2em 0
-  margin-left -1em
-  margin-right -1em
-  width 100%
+  width calc(100% + 2em)
+  background rgba(#2E302F, .8)
   display flex
-  flex-wrap wrap
+  flex-direction column
   align-items center
-  justify-content: center;
-  &-item
-    display flex
-    flex-direction column
-    justify-content center
-    align-items center
-    box-shadow 0 1px 10px rgba(black_primary, .3)
+  margin 1em 0
+  &-container
+    margin 2em 0
+    margin-left -1em
+    margin-right -1em
     width 100%
-    height 60vw
-    position relative
+    display flex
+    flex-wrap wrap
+    justify-content space-around
+  &-item
+    background white
+    display inline-block
+    width 300px
+    box-shadow 0 1px 10px rgba(black_primary, .6)
+    margin 1em
     cursor pointer
-    overflow hidden
     border-radius .3em
-    margin .5em
+    position relative
+    overflow hidden
     &:hover
       .description
-        transform translateY(-44%);
+        transform translateY(calc(-100% + 33px))
+    figure
+      margin 0
+      img
+        display block
+        width 100%
+        height 250px
+
     .title
       margin 0
-      font-size 1.5em
+      padding .3em
+      font-size 1.3em
       z-index 1
+      color gray_primary
     .description
-      transition all 1s
       position absolute
-      transform: translateY(100%);
       left 0
-      border-radius: .3em
+      border-radius 0 0 .3em
       width 100%
       height 100%
-      bottom -47%
       padding 1em
       background green_primary
       color white
       font-size 14px
-      z-index 2
+      transform translateY(100%)
+      transition transform ease 1s
       a
         display block
         margin-left 0
         padding .3em
-    img
-      width 100%
-      height 100%
-      position absolute
-      top 0
-      opacity 0.8
-      filter: blur(2px)
