--- a/stylus/styles.styl
+++ b/stylus/styles.styl
@@ -18,25 +18,14 @@ body
 @import './components/footer'
 
 // Media query
-@media screen and (min-width: 570px)
-  .Project
-    justify-content: space-between;
-    justify-content: center;
-    max-width 1200px
-    &-item
-      width calc(50% - 2em)
-      height 30vw
-      margin .5em
-
 @media screen and (min-width: 770px)
+  .Header
+    height 70vh
   .About
     flex-direction row-reverse
     &-avatar
       width 700px
       max-width auto
-  .Project-item
-    width 350px
-    height 250px
 
   .Contact > form
     div
@@ -49,7 +38,7 @@ body
 
   .Footer
     &-wrapper
-      justify-content: space-between;
+      justify-content space-between
     .social
       display block
 
