[add] translate site

--- a/stylus/components/about.styl
+++ b/stylus/components/about.styl
@@ -8,3 +8,8 @@
       display block
       width 100%
       border-radius 50%
+
+  .description > a
+    display block
+    color green_primary
+    padding .2em 0
