--- a/stylus/rules/colors.styl
+++ b/stylus/rules/colors.styl
@@ -5,6 +5,7 @@ green_primary = #009688
 black_primary = #212121
 gray_primary = #757575
 gray_secundary = #BDBDBD
+red_danger = #A52714
 
 facebook = #3B5998
 twitter = #1DA1F2
