--- a/stylus/styles.styl
+++ b/stylus/styles.styl
@@ -5,6 +5,8 @@
 @import './rules/colors'
 @import './rules/helpers'
 
+@require '../node_modules/izitoast/dist/css/iziToast.min.css'
+
 body
   font-size 14px
   font-family 'Montserrat'
